--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ authors = ["Purple Myst <PurpleMyst@users.noreply.github.com>"]
 name = "rdotdot"
 version = "0.1.0"
 [dependencies]
+peeking_take_while = "0.1.2"
 reffers = "0.4.2"
 
 [dependencies.nom]
